# mercutio-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  check.sh  flake.nix  test.sh
.github/workflows/: ci.yml
examples/: dual_transport.rs
src/: config.rs  io.rs  lib.rs  protocol.rs  tools.rs
src/io/: axum.rs  session_id.rs  stdlib.rs  tokio.rs
src/io/axum/: session_id.rs  sessions.rs
src/protocol/: config.rs  tools.rs
tests/: tool_registry.rs
