[package]
name = "mercutio"
description = "IO-less MCP server library"
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mbr/mercutio"
documentation = "https://docs.rs/mercutio"

[features]
io-stdlib = []
io-tokio = ["dep:tokio"]
io-axum = ["dep:axum", "dep:tokio", "rand"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
rust-mcp-schema = "0.7"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
tokio = { version = "1", features = ["io-std", "io-util", "sync"], optional = true }
tracing = "0.1"
axum = { version = "0.8", optional = true }
rand = { version = "0.9", optional = true }

[dev-dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["net", "rt", "rt-multi-thread", "macros"] }
tower = { version = "0.5", features = ["util"] }
